--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<nav>
 		<div class="left">
-			<img src="img/io.png" alt="icon"><span class="ori">orange</span><span>juice</span>
+			<sub><img src="img/io.png" alt="icon"></sub><span class="ori">orange</span><span>juice&trade;</span>
 		</div>
 		<div class="right">
 			<ul>
@@ -32,7 +32,7 @@
 		<img src="img/orange.jpg">
 	</div>
 	<div class="property">
-		<p><span class="bold">Orange</span>juice use only the very<br> best design fruits to create<br> your <span class="web">web</span> & <span class="web">app</span> designs.</p>
+		<p><span class="bold">Orange</span>juice&trade; use only the very<br> best design fruits to create<br> your <span class="web">web</span> & <span class="web">app</span> designs.</p>
 		<a href="#"><button class="quote">GET A QUOTE</button></a>
 		<a href="#"><button class="studies">VIEW CASE STUDIES</button></a>
 	</div>
