media queri added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link type="text/css" rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<meta charset="utf-8">
 </head>
@@ -27,15 +28,18 @@
 	<input type="text" placeholder="SEARCH"><img src="img/search.png" alt="icon">
 
 	</div>
-
-	<div class="orange">
-		<img src="img/orange.jpg">
-	</div>
-	<div class="property">
-		<p><span class="bold">Orange</span>juice&trade; use only the very<br> best design fruits to create<br> your <span class="web">web</span> & <span class="web">app</span> designs.</p>
-		<a href="#"><button class="quote">GET A QUOTE</button></a>
-		<a href="#"><button class="studies">VIEW CASE STUDIES</button></a>
-	</div>
+		<div class="dodo">
+		
+			<div class="orange">
+				<img src="img/orange.jpg">
+			</div>
+			<div class="property">
+				<p><span class="bold">Orange</span>juice&trade; use only the very<br> best design fruits to create<br> your <span class="web">web</span> & <span class="web">app</span> designs.</p>
+				<a href="#"><button class="quote">GET A QUOTE</button></a>
+				<a href="#"><button class="studies">VIEW CASE STUDIES</button></a>
+			</div>
+		</div>
+	
 	<footer>
 		
 	</footer>
